--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Karelia-Store</title>
+        <title>Fantasia-Yuni</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -80,7 +80,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Power Bank</div>
+                            <div class="portfolio-caption-heading">#</div>
                             </div>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Juego de carteras</div>
+                            <div class="portfolio-caption-heading">#</div>
                              </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Juego de mochila</div>
+                                <div class="portfolio-caption-heading">#</div>
                              </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Juego de Carteras</div>
+                                <div class="portfolio-caption-heading">#</div>
                               </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Equipo de audio portatil</div>
+                            <div class="portfolio-caption-heading">#</div>
                              </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Secadora de pelo</div>
+                                <div class="portfolio-caption-heading">#</div>
                                 </div>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/7.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                              <div class="portfolio-caption-heading">Camiseta deportiva</div>
+                              <div class="portfolio-caption-heading">#</div>
                               </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/8.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                              <div class="portfolio-caption-heading">Keratina-Kool</div>
+                              <div class="portfolio-caption-heading">#</div>
                                </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/9.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Camiseta deportiva</div>
+                                <div class="portfolio-caption-heading">#</div>
                               </div>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/10.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Batidora</div></div>
+                                <div class="portfolio-caption-heading">#</div></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
@@ -219,7 +219,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/11.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Equipo de audio portatil</div></div>
+                                <div class="portfolio-caption-heading">#</div></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
@@ -232,7 +232,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/12.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">No se</div></div>
+                                <div class="portfolio-caption-heading">#</div></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
@@ -245,7 +245,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/13.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Tenis</div></div>
+                                <div class="portfolio-caption-heading">#</div></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
@@ -258,7 +258,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/14.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Jueguito de niña </div></div>
+                                <div class="portfolio-caption-heading">#</div></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
@@ -271,7 +271,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/15.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Calzoncillos</div></div>
+                                <div class="portfolio-caption-heading">#</div></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
@@ -284,7 +284,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/16.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Sandalias de mujer</div></div>
+                                <div class="portfolio-caption-heading">#</div></div>
                         </div>
                     </div>
                     
@@ -355,7 +355,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Power bank</h2>
+                                    <h2 class="text-uppercase">#</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <a href="https://api.whatsapp.com/send?phone=+5351549124&text=Hola%20,me%20interesa.">      
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -377,7 +377,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Juego de carteras</h2>
+                                    <h2 class="text-uppercase">#</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
                                     <a href="https://api.whatsapp.com/send?phone=+5351549124&text=Hola%20,me%20interesa.">      
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -399,7 +399,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Juego de mochila</h2>
+                                    <h2 class="text-uppercase">#</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
                                     <a href="https://api.whatsapp.com/send?phone=+5351549124&text=Hola%20,me%20interesa.">      
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -421,7 +421,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Juego de cartera</h2>
+                                    <h2 class="text-uppercase">#</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
                                     <a href="https://api.whatsapp.com/send?phone=+5351549124&text=Hola%20,me%20interesa.">      
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -443,7 +443,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Equipo de audio portatil</h2>
+                                    <h2 class="text-uppercase">#</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpeg" alt="..." />
                                     <a href="https://api.whatsapp.com/send?phone=+5351549124&text=Hola%20,me%20interesa.">      
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -465,7 +465,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Secadora de pelo</h2>
+                                    <h2 class="text-uppercase">#</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
                                     <a href="https://api.whatsapp.com/send?phone=+5351549124&text=Hola%20,me%20interesa.">      
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -487,7 +487,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Camiseta de hombre sport</h2>
+                                    <h2 class="text-uppercase">#</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/7.jpg" alt="..." />
                                     <a href="https://api.whatsapp.com/send?phone=+5351549124&text=Hola%20,me%20interesa.">      
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
